--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             <input type="text" class="price-input" id="car" placeholder="Автомобиль, который вас интересует">
             <button class="button" type="button" id="price-action">Узнать цену</button>
         </form>
-        <img src="images/rolls.png" alt="Rolls" class="price-img">
+        <img src="images/rolls.png" alt="Rolls" class="price-image">
     </div>
 </section>
 
